--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-md-flex align-items-end justify-content-center">
-                        <img src="img/perfil_transparencia_s.png" alt="Foto de perfil" />
+                        <img src="img/foto_perfil_s.png" alt="Foto de perfil" />
                     </div>
                 </div>
             </div>
