--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Página Personal de Presentación</title>
+    <title>Diego Ballester Vea - Portafolio Personal</title>
     <link rel="icon" href="img/logo_rt_ico.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
@@ -56,7 +56,7 @@
         </div>
     </header>
     <!-- MAIN -->
-    <main data-bs-spy="scroll" data-bs-target="#barra_menu" data-bs-offset="50" class="position-relative">
+    <main>
         <!-- INTRODUCCIÓN -->
         <section class="fondo_perfil">
             <div class="container" style="margin-top: 55px; padding-top: 100px">
@@ -87,7 +87,7 @@
         <section id="sobre_mi" class="margen_scroll">
             <div class="container espaciado_seccion">
                 <div class="text-center">
-                    <h3><b>Sobre mí</b></h3>
+                    <h3><b>SOBRE MÍ</b></h3>
                     <p style="text-align: justify">
                         Soy un apasionado de la tecnología incapaz de vivir un día sin
                         aprender algo nuevo o curiosear sobre ella. Uso cada oportunidad
@@ -118,6 +118,9 @@
         </section>
         <!-- APRENDIENDO -->
         <section id="aprendiendo" class="margen_scroll">
+            <div>
+                <h3 class="text-center" style="margin-bottom: 0px;"><b>APRENDIENDO</b></h3>
+            </div>
             <div class="container-fluid color_barra espaciado_seccion">
                 <div class="container">
                     <table style="margin: auto;">
@@ -146,7 +149,7 @@
         <!-- INTERESES -->
         <section id="intereses" class="margen_scroll">
             <div class="container espaciado_seccion text-center">
-                <h3 style="padding-bottom: 20px;"><b>Intereses</b></h3>
+                <h3 style="padding-bottom: 20px;"><b>INTERESES</b></h3>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Ciberseguridad</li>
                     <li class="list-group-item">Analista de sistemas</li>
@@ -159,7 +162,7 @@
         <!-- HABILIDADES -->
         <section id="habilidades" class="margen_scroll">
             <div class="container espaciado_seccion text-center">
-                <h3 style="padding-bottom: 20px;"><b>Habilidades</b></h3>
+                <h3 style="padding-bottom: 20px;"><b>HABILIDADES</b></h3>
                 <table class="table" style="margin: auto;">
                     <tr>
                         <th class="table-dark">Conocimientos</th>
@@ -212,7 +215,7 @@
         <!-- CONTACTO -->
         <section id="contacto" class="margen_scroll">
             <div class="container espaciado_seccion">
-                <h3 class="text-center"><b>Contacto</b></h3>
+                <h3 class="text-center"><b>CONTACTO</b></h3>
                 <form action="mailto:dballestervea@proton.mail" method="post">
                     <div class="mb-3 mt-3">
                         <label for="nombre" class="form-label">Nombre:</label>
