--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <!-- APRENDIENDO -->
         <section id="aprendiendo" class="margen_scroll">
             <div>
-                <h3 class="text-center" style="margin-bottom: 0px;"><b>APRENDIENDO</b></h3>
+                <h3 class="text-center" style="margin-bottom: -9px;"><b>APRENDIENDO</b></h3>
             </div>
             <div class="container-fluid color_barra espaciado_seccion">
                 <div class="container">
@@ -223,11 +223,7 @@
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="nombre" class="form-label">Email:</label>
-                        <input class="form-control" type="text" name="email" placeholder="Email" required />
-                    </div>
-                    <div class="mb-3 mt-3">
-                        <label for="nombre" class="form-label">Asunto:</label>
-                        <input class="form-control" type="text" name="asunto" placeholder="Asunto" required />
+                        <input class="form-control" type="email" name="email" placeholder="Email" required />
                     </div>
                     <div class="mb-3 mt-3">
                         <label for="nombre">Mensaje:</label>
