--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <td>ParrotOS</td>
                         <td>
                             <div class="progress">
-                                <div class="progress-bar" style="width:20%"></div>
+                                <div class="progress-bar" style="width:30%"></div>
                             </div>
                         </td>
                     </tr>
@@ -205,7 +205,7 @@
                         <td>Python</td>
                         <td>
                             <div class="progress">
-                                <div class="progress-bar" style="width:20%"></div>
+                                <div class="progress-bar" style="width:10%"></div>
                             </div>
                         </td>
                     </tr>
@@ -216,22 +216,19 @@
         <section id="contacto" class="margen_scroll">
             <div class="container espaciado_seccion">
                 <h3 class="text-center"><b>CONTACTO</b></h3>
-                <form action="mailto:dballestervea@proton.mail" method="post">
+                <form method="post">
                     <div class="mb-3 mt-3">
-                        <label for="nombre" class="form-label">Nombre:</label>
-                        <input class="form-control" type="text" name="nombre" placeholder="Nombre" required />
+                        <input class="form-control" type="text" name="nombre" id="name" placeholder="Nombre" required />
                     </div>
                     <div class="mb-3 mt-3">
-                        <label for="nombre" class="form-label">Email:</label>
-                        <input class="form-control" type="email" name="email" placeholder="Email" required />
+                        <input class="form-control" type="email" name="email" id="email" placeholder="Email" required />
                     </div>
                     <div class="mb-3 mt-3">
-                        <label for="nombre">Mensaje:</label>
-                        <textarea class="form-control" name="mensaje" rows="5" placeholder="Escribe tu mensaje aquí."
+                        <textarea class="form-control" name="mensaje" rows="5" id="message" placeholder="Escribe tu mensaje aquí."
                             required></textarea>
                     </div>
                     <div class="mb-3 mt-3 text-center">
-                        <button type="submit" class="btn btn-primary">Enviar</button>
+                        <button type="submit" class="btn btn-primary" value="send">Enviar</button>
                     </div>
                 </form>
             </div>
