--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <h1 class="texto_rojo text-uppercase">
                                 <b>Diego Ballester Vea</b>
                             </h1>
-                            <h4><i>Administrador de Sistemas Informáticos en Red</i></h4>
+                            <h2><i>Administrador de Sistemas Informáticos en Red</i></h2>
                             <p style="padding-top: 10px">
                                 Actualmente estoy compaginando el trabajo con los estudios
                                 superiores de
@@ -90,8 +90,8 @@
                     <h3><b>SOBRE MÍ</b></h3>
                     <p style="text-align: justify">
                         Soy un apasionado de la tecnología incapaz de vivir un día sin
-                        aprender algo nuevo o curiosear sobre ella. Uso cada oportunidad
-                        que tengo para practicar y auto evaluar mis propios conocimientos.
+                        aprender algo nuevo o curiosear sobre ella. <u>Uso cada oportunidad
+                        que tengo para practicar y auto evaluar mis propios conocimientos</u>.
                         Aunque estudié previamente un título de explotación de sistemas
                         informáticos, posteriormente trabajé en varios sectores ajenos a
                         IT, donde desarrollé habilidades transferibles como la capacidad
@@ -100,7 +100,7 @@
                     </p>
                     <p style="text-align: justify">
                         Me encontraba estudiando desarrollo de software, hasta que me topé
-                        con el mundo de la ciberseguridad y empecé a investigar sobre
+                        con el mundo de la <i>ciberseguridad</i> y empecé a investigar sobre
                         ella. Me emociona la idea de contribuir a administrar y defender
                         el duro trabajo de las empresas y particulares de los
                         ciberdelincuentes. Toda seguridad es poca ante la amenaza que
@@ -108,7 +108,7 @@
                         este.
                     </p>
                     <p style="text-align: justify">
-                        Me encuentro abierto a un cambio profesional, por lo que,
+                        <mark>Me encuentro abierto a un cambio profesional</mark>, por lo que,
                         <b>si estás buscando alguien con ganas y pasión en lo que hace, no
                             dudes en ponerte en
                             <a href="#contacto" class="texto_rojo">contacto</a> conmigo.</b>
@@ -216,7 +216,7 @@
         <section id="contacto" class="margen_scroll">
             <div class="container espaciado_seccion">
                 <h3 class="text-center"><b>CONTACTO</b></h3>
-                <form method="post">
+                <form action="mailto:dballestervea@proton.mail" method="post">
                     <div class="mb-3 mt-3">
                         <input class="form-control" type="text" name="nombre" id="name" placeholder="Nombre" required />
                     </div>
