--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <h3 class="text-center" style="margin-bottom: -7px;"><b>APRENDIENDO</b></h3>
             </div>
             <div class="container-fluid color_barra espaciado_seccion">
-                <div class="container">
+                <div class="container table-responsive">
                     <table style="margin: auto;">
                         <tr>
                             <td>
